fixed orphan title & incomplete row flavor descr bug, noImg text wrap bug.

--- a/web/sass/screen.scss
+++ b/web/sass/screen.scss
@@ -106,8 +106,10 @@
         display: inline-block;
         vertical-align: middle;
         margin: 0;
-        font-size: 2em;
+        font-size: 1.8em;
         font-family: Pacifico, Georgia, serif;
+        max-width: 130px;
+        line-height: 1.2;
     }
     &:before {
         content: '';
